--- a/src/app/add-post/add-post.component.html
+++ b/src/app/add-post/add-post.component.html
@@ -1,1 +1,28 @@
-<p>add-post works!</p>
+<div class="add-post-content">
+    <div class="container">
+        <div>
+            <h3 class ="new-post-title">Create New Post</h3>
+        </div>
+    <hr>
+    <form [formGroup]="addPostForm" (ngSubmit)="addPost()">
+        <div class="form-group">
+          <label class="post-title">Title</label>
+          <input type="text" [formControlName]="'title'" class="form-control" placeholder="Title">
+        </div>
+        <div class="form-group">
+          <label class="post-content">Body</label>
+          <textarea [froalaEditor] formControlName="body"></textarea>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form >
+
+    <!-- <div [froalaEditor]>Hello, Froala!</div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <textarea [froalaEditor] formControlName="formModel"></textarea>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form> -->
+
+    </div>
+</div>
