ADD some extra features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Pacifico|Quicksand&display=swap');
+</style>
 <router-outlet></router-outlet>
