--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,7 @@
 .header{
     padding: 5px 20px;
-    background: royalblue;
+    background: black;
+    font-family: 'Pacifico', cursive;
 }
 
 .title{
@@ -10,14 +11,15 @@
 
 .login, .register{
     float: right;
-    text-decoration: none;
     color: aliceblue;
-    padding-top: 10px;
+    margin-top: 38px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .new-post{
     float: right;
     text-decoration: none;
     color: aliceblue;
-    padding-top: 10px;
+    margin-top: 45px;
+    font-family: 'Quicksand', sans-serif;
 }
