--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,14 +2,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1><a href="" class="title"> Remixed Blog</a></h1>
+          <h1><a href="" class="title"> <img src="assets/img/output-onlinepngtools.png" height="120px" width="120px">Social Stream</a></h1>
         </div> <!-- Title -->
 
-        <div class="col-md-3" *ngIf="authService.isAuthenticated()">
+        <div class="col-md-2" *ngIf="authService.isAuthenticated()">
           <a href="/add-post" class="new-post">Add Post</a>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
+          <a href="home" class="login btn btn-default">Home</a>
           <a href="login" class="login btn btn-default">Login</a>
           <a href="register" class="register btn btn-default">Register</a>
         </div> <!-- Login and Register -->
